Fixed scrollbar issues in Chrome and added autoprefixer.

--- a/src/components/api-request-modal/codeblock/codeblock.sass
+++ b/src/components/api-request-modal/codeblock/codeblock.sass
@@ -15,7 +15,7 @@
 pre
   flex: 1
   margin: 0
-  overflow-x: scroll
+  overflow-x: auto
   overflow-y: hidden
   position: relative
   padding: 0
