--- a/src/components/api-request-modal/styles.module.sass
+++ b/src/components/api-request-modal/styles.module.sass
@@ -37,7 +37,7 @@
     .scrollable
       padding-right: 1em
       flex: 1
-      overflow-y: scroll
+      overflow-y: auto
       display: flex
       flex-direction: column
       gap: 1em
