--- a/src/index.sass
+++ b/src/index.sass
@@ -15,6 +15,17 @@
   scrollbar-color: var(--dark-text) var(--background-color)
   scrollbar-width: auto
 
+  &::-webkit-scrollbar
+    height: 3px
+
+  &::-webkit-scrollbar-track
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
+
+  &::-webkit-scrollbar-thumb
+    background-color: var(--dark-text)
+    border-radius: 10px
+
+
 body
   color: var(--text)
   display: flex
